--- a/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
+++ b/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimalnfoWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnimalnfoWindow.Designer.cs">
+      <DependentUpon>AnimalnfoWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Animaux.cs" />
     <Compile Include="CarteJeu.cs">
       <SubType>UserControl</SubType>
@@ -53,6 +59,13 @@
     <Compile Include="CarteJeu.designer.cs">
       <DependentUpon>CarteJeu.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChoixAnimaux.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChoixAnimaux.Designer.cs">
+      <DependentUpon>ChoixAnimaux.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Choix_Animaux.cs" />
     <Compile Include="ZooInterface.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,8 +76,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TilesetImageGenerator.cs" />
     <Compile Include="TileVisiteur.cs" />
+    <EmbeddedResource Include="AnimalnfoWindow.resx">
+      <DependentUpon>AnimalnfoWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CarteJeu.resx">
       <DependentUpon>CarteJeu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChoixAnimaux.resx">
+      <DependentUpon>ChoixAnimaux.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
