--- a/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
+++ b/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
@@ -65,7 +65,6 @@
     <Compile Include="ChoixAnimaux.Designer.cs">
       <DependentUpon>ChoixAnimaux.cs</DependentUpon>
     </Compile>
-    <Compile Include="Choix_Animaux.cs" />
     <Compile Include="Heros.cs" />
     <Compile Include="ZooInterface.cs">
       <SubType>Form</SubType>
@@ -180,6 +179,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\zoo_tileset.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dorset_Sheep-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Male_Lion-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\UNICORN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Autumn_Lion-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
