Concierge Maison + Dechet ToolStrip
Clicker sur la maison permet maintenant de faire apparetre un menu pour employer un concierge. L'emploie du concierge n'est pas encore faite.

On peut maintenant voir le nombre de dechets, le ToolStripInformative se fait changer a chaque fois que la map se fait paint.

--- a/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
+++ b/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
@@ -65,6 +65,12 @@
     <Compile Include="ChoixAnimaux.Designer.cs">
       <DependentUpon>ChoixAnimaux.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChoixConcierge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChoixConcierge.Designer.cs">
+      <DependentUpon>ChoixConcierge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Heros.cs" />
     <Compile Include="ToolStripInformative.cs">
       <SubType>UserControl</SubType>
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ChoixAnimaux.resx">
       <DependentUpon>ChoixAnimaux.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChoixConcierge.resx">
+      <DependentUpon>ChoixConcierge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
