--- a/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
+++ b/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
@@ -210,5 +210,8 @@
   <ItemGroup>
     <None Include="Resources\Autumn_Lion-icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CONCIERGE_GB_1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
