--- a/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
+++ b/TP2 DevGraphique/TP2 DevGraphique/TP2 DevGraphique.csproj
@@ -228,5 +228,14 @@
   <ItemGroup>
     <None Include="Resources\ListeNomsMasculins.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\janitor.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\janitor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\janitor.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
